--- a/Portfolio-using-angular/package.json
+++ b/Portfolio-using-angular/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angpro",
+  "name": "portfolio-using-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,7 +18,7 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
-    "angpro": "file:",
+    "portfolio-using-angular": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
